; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/common/extr_reloptions.c_add_real_reloption.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/common/extr_reloptions.c_add_real_reloption.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { double, double, double }

@RELOPT_TYPE_REAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @add_real_reloption(i32 %0, i8* %1, i8* %2, double %3, double %4, double %5, i32 %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca double, align 8
  %12 = alloca double, align 8
  %13 = alloca double, align 8
  %14 = alloca i32, align 4
  %15 = alloca %struct.TYPE_2__*, align 8
  store i32 %0, i32* %8, align 4
  store i8* %1, i8** %9, align 8
  store i8* %2, i8** %10, align 8
  store double %3, double* %11, align 8
  store double %4, double* %12, align 8
  store double %5, double* %13, align 8
  store i32 %6, i32* %14, align 4
  %16 = load i32, i32* %8, align 4
  %17 = load i32, i32* @RELOPT_TYPE_REAL, align 4
  %18 = load i8*, i8** %9, align 8
  %19 = load i8*, i8** %10, align 8
  %20 = load i32, i32* %14, align 4
  %21 = call i64 @allocate_reloption(i32 %16, i32 %17, i8* %18, i8* %19, i32 %20)
  %22 = inttoptr i64 %21 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %22, %struct.TYPE_2__** %15, align 8
  %23 = load double, double* %11, align 8
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  store double %23, double* %25, align 8
  %26 = load double, double* %12, align 8
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 1
  store double %26, double* %28, align 8
  %29 = load double, double* %13, align 8
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 2
  store double %29, double* %31, align 8
  %32 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %33 = bitcast %struct.TYPE_2__* %32 to i32*
  %34 = call i32 @add_reloption(i32* %33)
  ret void
}

declare dso_local i64 @allocate_reloption(i32, i32, i8*, i8*, i32) #1

declare dso_local i32 @add_reloption(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
